# NSOS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  readme.md
bmpMaker/: generate_index.py  index.html
cc/: Makefile
include/: cutils.h  kernel.h  uart.h
include/fonts/: basic_font.h
include/graphics/: basic_graphics.h  fill_color.h  init_framebuffer.h
include/kernel/: cutils.h  kernel.h  limine.h  mm.h  uart.h  utils.h
include/kernel/fonts/: PixelMPlus.h  basic_font.h  font_info.h
include/kernel/graphics/: basic_graphics.h  init_framebuffer.h
include/kernel/input/: keys.h
include/kernel/mailbox/: mailbox.h
include/kernel/mmio/: mmio.h
include/kernel/peripherals/: base.h  gpio.h
include/mailbox/: mailbox.h
include/mmio/: mmio.h
include/peripherals/: UART0.h  act_light_controls.h  base.h  gpio.h
serialPassthrough/: main.py  pyproject.toml
src/: limine.conf  linker-arm.ld
src/c/: cutils.c  kernel.c  uart.c
src/c/fonts/: basicFont.c
src/c/graphics/: basic_graphics.c  fill_color.c  init_framebuffer.c
src/c/mailbox/: mailbox.c
src/c/mmio/: mmio.c
src/c/peripherals/: UART0.c  act_light_controls.c  base.c  gpio.c
src/kernel/asm/: boot.S  mm.S  utils.S
src/kernel/c/: cutils.c  kernel.c  uart.c
src/kernel/c/fonts/: PixelMPlus.c  basicFont.c
src/kernel/c/graphics/: basic_graphics.c  init_framebuffer.c
src/kernel/c/mailbox/: mailbox.c
src/kernel/c/mmio/: mmio.c
src/kernel/c/peripherals/: base.c  gpio.c
toolchains/: aarch64.cmake  arm-none-eabi.cmake  x86_64.cmake
utils/: readme.md
utils/arduino_code/SerialPassthrough/: compile_commands.json  platformio.ini
utils/arduino_code/SerialPassthrough/src/: main.cpp
utils/bmpMaker/: index.html
utils/serialPassthrough/: main.py
